hphp/test/quick/vec/vec-hh-only2.php.expectf
Fatal error: Call to undefined function vec() in %s on line 5